# PDP_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_keycloak.dockerfile  README.md  Test.ipynb  __init__.py  alembic.ini  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml  realm-export-deploy.json  realm-export.json  servers.json
.github/workflows/: aws.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260329_120000_init_schema_and_timestamptz.py  20260404_090000_align_relationship_constraints.py  (+1 more)
certs/: cert.pem  key.pem
requirements/: build.in  build.txt  dev.txt  tests.txt  typing.txt
scripts/: deploy-backend.sh  run-backend.sh
src/: app.py  auth.py  config.py  constants.py  dependencies.py  logger.py  models.py  schemas.py  startup.py
tests/: conftest.py  test_alembic_env.py  test_alembic_integration.py  test_api_contract.py  test_async_dependencies.py  test_auth.py  test_auth_integration.py  test_config.py  test_deploy_backend_script.py  test_dockerfile.py  test_files_router.py  test_homework_crud.py  test_homework_router.py  test_homework_services.py  test_keycloak_secret.py  test_lessons_crud.py  test_lessons_router.py  test_lessons_services.py  test_logging_events.py  test_migration_smoke.py  test_observability.py  test_postgres_db.py  test_relations_router.py  test_relations_services.py  test_router_schemas.py  test_run_backend_script.py  test_s3_db.py  test_schema_constraints.py  test_startup.py  test_users_crud.py  test_users_router.py  test_users_services.py  test_validation_integration.py
(+50 files in other folders)
