[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "aioboto3>=15.5.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "opencv-python==4.12.0.88",
    "pydantic>=2.11.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings==2.11.0",
    "pypdf>=5.4.0",
    "pydub==0.25.1",
    "fastapi==0.119.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-multipart==0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn==0.38.0",
    "black>=26.3.1",
    "graypy>=2.1.0",
    "python-keycloak==5.8.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require external services such as PostgreSQL",
]
